--- a/gerenciamento_senai/src/main/resources/application.properties
+++ b/gerenciamento_senai/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciamento_de_patrimonios
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.mvc.favicon.enabled=false
